src/snapshots/nesse_bank__tests__handle_10mil_transactions.snap
---
source: src/tests.rs
assertion_line: 92
expression: historic_run_large(tx_path)
---
client,available,held,total,locked
1,4999999500.0000,0,4999999500.0000,false

