src/snapshots/nesse_bank__tests__historic_runs@deposit-duplicate-tx.csv.snap
---
source: src/tests.rs
assertion_line: 13
expression: historic_run(path)
input_file: src/test-data/historic-runs/deposit-duplicate-tx.csv
---
client,available,held,total,locked
1,2.0,0,2.0,false

