src/snapshots/nesse_bank__tests__historic_runs@deposit-reject-if-frozen.csv.snap
---
source: src/tests.rs
assertion_line: 13
expression: historic_run(path)
input_file: src/test-data/historic-runs/deposit-reject-if-frozen.csv
---
client,available,held,total,locked
1,0.0,0.0,0.0,true

