src/snapshots/nesse_bank__tests__historic_runs@withdrawal-reject-if-frozen.csv.snap
---
source: src/tests.rs
assertion_line: 13
expression: historic_run(path)
input_file: src/test-data/historic-runs/withdrawal-reject-if-frozen.csv
---
client,available,held,total,locked
1,3.0,0.0,3.0,true

