src/snapshots/nesse_bank__tests__historic_runs@withdrawal-reject-overdraft.csv.snap
---
source: src/tests.rs
assertion_line: 11
expression: historic_run(path)
input_file: src/test-data/historic-runs/withdrawal-reject-overdraft.csv
---
client,available,held,total,locked
1,1.0,0,1.0,false

